# LittleLessProtocol

./: README.md  library.properties
examples/ChatServer/: ChatProtocolA.ino  ChatServer.ino
examples/EchoService/: EchoService.ino  EchoServiceProtocolA.ino
src/: LittleLessApplicationA.cpp  LittleLessApplicationA.h  LittleLessBaseA.cpp  LittleLessBaseA.h  LittleLessProtocol.h  LittleLessProtocolA.cpp  LittleLessProtocolA.h  LittleLessProtocolTypes.h
test/: CMakeLists.txt  LittleLessBaseAMock.h  LittleLessProtocolAMock.h  Stream.h  StreamMock.cpp  StreamMock.h  TestLittleLessBaseA.cpp  TestLittleLessProtocolA.cpp
